ingress/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    name: nginx
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: http
      protocol: TCP
  selector:
    app: nginx
